--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,16 @@
 @charset "UTF-8";
 /* CSS Document */
 
+body {
+	font-family: 'Roboto', sans-serif;
+	font-style:normal;
+	font-weight:normal;
+}
+
+h1 {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .hidden {
     display: none;
 }
