--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 	font-family: 'Tangerine', sans-serif;
 	font-style:normal;
 	font-weight:normal;
+    text-shadow: 4px 4px 4px #aaa;
     color: rgb(34, 29, 29);
     background-color: #d4b9b9;
     background-image: url('../images/letters.jpg');
